# wabot

./: .gitignore  BOOTSTRAP-PROMPT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/rules/: current-phase.md  phase-1.md  phase-10.md  phase-11.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md  phases-3-to-9.md
docs/: CHEAT-SHEET.md  INSTALL.md  MODES.md  OPERATING.md  RUNBOOK.md  SECURITY.md  TROUBLESHOOTING.md
hooks/: __init__.py  _common.py  pre_tool.py
launchd/: com.DOMAIN.whatsbot.backup.plist.template  com.DOMAIN.whatsbot.plist.template  com.DOMAIN.whatsbot.watchdog.plist.template
sql/: schema.sql
sql/migrations/: 001_project_path.sql  002_session_id_partial_unique.sql
tests/: conftest.py  send_fixture.sh  smoke.py  smoke_phase2.py
tests/fixtures/: headless_claude.py  meta_help.json  meta_non_text.json  meta_ping.json  meta_status.json  meta_unknown_command.json  meta_unknown_sender.json
tests/integration/: test_backup_db.py  test_deny_patterns_e2e.py  test_diagnostics_e2e.py  test_ffmpeg_real.py  test_health.py  test_heartbeat_lifespan.py  test_hook_endpoint.py  test_hook_fail_closed.py  test_hook_script.py  test_import_e2e.py  test_injection_audit.py  test_kill_e2e.py  test_limit_guard_e2e.py  test_lock_e2e.py  test_media_e2e.py  test_media_image_e2e.py  test_media_sweeper_lifespan.py  test_metrics_e2e.py  test_mode_gated_hook.py  test_mode_switch.py  test_output_dialog.py  test_p_launches_tmux.py  test_panic_e2e.py  test_prompt_roundtrip.py  test_redaction_wired.py  test_resilience_circuit_integration.py  test_startup_recovery_real.py  test_tmux_subprocess_real.py  test_unlock_e2e.py  test_watchdog_script.py  test_watchdog_transcript_watcher_real.py  test_webhook_routing.py  test_whatsapp_sender_circuit.py  test_whatsapp_sender_live.py
tests/unit/: test_allow_rules.py  test_claude_paths.py  test_command_handler.py  test_commands.py  test_config.py  test_confirmation_coordinator.py  test_db_init.py  test_delete_service.py  test_deny_patterns.py  test_diagnostics_commands.py  test_diagnostics_service.py  test_edge_cases.py  test_ffmpeg_audio_converter.py  test_file_heartbeat_writer.py  test_file_log_reader.py  test_file_media_cache.py  test_force_command.py  test_force_service.py  test_git_url.py  test_heartbeat.py  test_heartbeat_pumper.py  test_hook_common.py  test_hook_decisions.py  test_hook_service.py  test_injection.py  test_iter_media_audio_dispatch.py  test_iter_media_messages.py  test_kill_command.py  test_kill_service.py  test_launch.py  test_launchd_template.py  test_limit_service.py  test_limits_domain.py  test_lock_service.py  test_lock_status_badge.py  test_lock_wiring.py  test_lockdown.py  test_lockdown_service.py  test_locks.py  test_log_events.py  (+57 more)
whatsbot/: __init__.py  config.py  logging_setup.py  main.py
whatsbot/adapters/: __init__.py  ffmpeg_audio_converter.py  file_heartbeat_writer.py  file_log_reader.py  (+24 more)
(+106 files in other folders)
