[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsbot"
version = "0.1.0"
description = "Persoenlicher WhatsApp-Bot zur Fernsteuerung von Claude Code auf macOS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary — Single-User, not for redistribution" }
authors = [{ name = "Hagen Marggraf", email = "hagenmarggraf@gmx.de" }]

# Runtime deps come from requirements.txt to keep a single source of truth.
# Install via `make install` (uses pip -r requirements{,-dev}.txt).
dependencies = []

[tool.setuptools.packages.find]
include = ["whatsbot*"]
exclude = ["tests*", "hooks*", "bin*", "launchd*", "sql*", "docs*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: pure domain tests, no I/O",
    "integration: adapters with mocks",
    "smoke: end-to-end against mock Meta server",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["whatsbot"]
branch = true
omit = ["whatsbot/__init__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

# ---------------------------------------------------------------------------
# mypy — strict for the domain core, relaxed at the edges (Phase-1 baseline)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["whatsbot"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "S",   # bandit security
    "TID", # tidy imports
    "RUF", # ruff-specific
]
ignore = [
    "S101", # assert use is fine in tests
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "TID"]
"hooks/**/*.py" = ["S603", "S607"]  # subprocess calls are intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
